<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:touchscreenBlocksFocus="true"

    android:background="#ffdfeaf1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_header"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/media_streamer"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:clickable="true"
        android:background="#f08c35"
        android:textColor="#ffffff"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/super_duo1"
        android:clickable="true"
        android:layout_below="@+id/media_streamer"
        android:layout_alignLeft="@+id/media_streamer"
        android:layout_alignStart="@+id/media_streamer"
        android:layout_alignRight="@+id/media_streamer"
        android:layout_alignEnd="@+id/media_streamer"
        android:background="#f08c35"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/super_duo2"
        android:clickable="true"
        android:layout_below="@+id/super_duo1"
        android:layout_alignRight="@+id/super_duo1"
        android:layout_alignEnd="@+id/super_duo1"
        android:layout_alignLeft="@+id/super_duo1"
        android:layout_alignStart="@+id/super_duo1"
        android:background="#f08c35"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/ant_terminator"
        android:clickable="true"
        android:layout_below="@+id/super_duo2"
        android:layout_alignRight="@+id/super_duo2"
        android:layout_alignEnd="@+id/super_duo2"
        android:layout_alignLeft="@+id/super_duo2"
        android:layout_alignStart="@+id/super_duo2"
        android:background="#f08c35"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/materialize"
        android:clickable="true"
        android:layout_below="@+id/ant_terminator"
        android:layout_alignRight="@+id/ant_terminator"
        android:layout_alignEnd="@+id/ant_terminator"
        android:layout_alignLeft="@+id/ant_terminator"
        android:layout_alignStart="@+id/ant_terminator"
        android:textColor="#ffffff"
        android:background="#f08c35"
        android:layout_marginTop="10dp"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:clickable="true"
        android:layout_below="@+id/materialize"
        android:layout_alignRight="@+id/materialize"
        android:layout_alignEnd="@+id/materialize"
        android:layout_alignLeft="@+id/materialize"
        android:layout_alignStart="@+id/materialize"
        android:background="#ff3a6a"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:onClick="sendMessage" />
</RelativeLayout>
